# dbt-instacart-demo

./: README.md  dbt_project.yml  pyproject.toml
models/: schema.yml  sources.yml
