[project]
name = "dbt-instacart-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "asimv",email = "asimv05@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-snowflake (>=1.9.1,<2.0.0)"
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
